@@ -132,6 +132,7 @@ EOF
 	rm -f $HS_CONF 2>/dev/null
 
 	[ "$HS_MACAUTH" = "on" ] && addconfig2 "macauth"
+	[ "$HS_WPAGUESTS" = "on" ] && addconfig2 "wpaguests"
 	[ -n "$HS_POSTAUTH_PROXY" -a -n "$HS_POSTAUTH_PROXYPORT" ] && {
 	    addconfig2 "postauthproxy $HS_POSTAUTH_PROXY"
 	    addconfig2 "postauthproxyport $HS_POSTAUTH_PROXYPORT"
@@ -168,7 +169,7 @@ checkfornew() {
 radiusconfig() {
     touch $LOCAL_CONF $HS_CONF 
     if [ "x$HS_RADCONF" = "xurl" ]; then 
-	for s in "$HS_RADCONF_URL $HS_RADCONF_URLS"; do
+	for s in $HS_RADCONF_URL $HS_RADCONF_URLS; do
 	    sep='?'
 	    opt=
 	    qs="config=chilli&mac=$HS_NASMAC&nasid=$HS_NASID&nasip=$HS_NASIP&ssid=$HS_SSID"
@@ -177,7 +178,7 @@ radiusconfig() {
 	    curl -k -A CoovaAP $opt "$s$sep$qs" 2>/dev/null > $HS_TEMP && { checkfornew; break; }
 	done
     elif [ "x$HS_RADCONF" = "xon" ]; then 
-	for s in "$HS_RADCONF_SERVER $HS_RADCONF_SERVERS"; do
+	for s in $HS_RADCONF_SERVER $HS_RADCONF_SERVERS; do
 	    chilli_radconfig \
 		-c /dev/null \
 		--radiusserver1="$HS_RADCONF_SERVER" \
