@@ -1,6 +1,9 @@
 
 == ChangeLog (Coova Chilli current svn revision) ==
 
+* Allow certain ICMP packets from external interface into chilli LAN for proper MTU negotiation - includes ICMP types 0, 3, 5, 11.
+* Fixups in WPA RADIUS proxy code - allow for change of credentials (logging out previous session) and drop fewer authentication requests.
+
 == ChangeLog (Coova Chilli v1.0.4 svn revision 51) ==
 
 * Merged a version of the ''Any IP'' patch as option ''uamanyip''
